# poppler

./: CMakeLists.txt  SConstruct  popplerdev.wxs.in  popplerrun.wxs.in
cmake/modules/: FindGTK.cmake  FindGTK2.cmake  PopplerMacros.cmake
glib/: CMakeLists.txt  SConscript  poppler-page.cc
glib/demo/: CMakeLists.txt  main.c
